cv upload issue

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Tbh.Online.Test.Web.csproj
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Tbh.Online.Test.Web.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Tbh.Online.Test.Service\Tbh.Online.Test.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\examineeCV\" />
+  </ItemGroup>
+
 </Project>
